--- a/client/src/components/HomePage.css
+++ b/client/src/components/HomePage.css
@@ -1,5 +1,3 @@
-/* HomePage.css */
-
 /* General Styles */
 body {
     font-family: 'Arial', sans-serif;
@@ -57,6 +55,7 @@ body {
   /* Main Content Styles */
   .container {
     padding-top: 2rem;
+    display: flex;
   }
   
   .about-us, .contact-us, .upcoming-events {
@@ -65,13 +64,12 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(140, 106, 93, 0.3);
     border: 1px solid #8c6a5d;
-    margin-bottom: 1rem; /* Add bottom margin for spacing */
   }
-  
+
   .about-us {
-    margin-right: 1rem; /* Add right margin for spacing */
+    margin-right: 1rem;
   }
-  
+
   .about-us h3, .contact-us h3, .upcoming-events h3 {
     color: #8c6a5d;
   }
@@ -92,7 +90,6 @@ body {
     padding-right: 0;
     display: flex;
     align-items: center;
-    margin-bottom: 0.5rem;
   }
   
   .upcoming-events .event-image {
@@ -100,22 +97,6 @@ body {
     width: 50px;
     object-fit: cover;
     margin-right: 0.5rem;
-  }
-  
-  .upcoming-events .event-details {
-    flex-grow: 1;
-  }
-  
-  .upcoming-events h5 {
-    margin: 0;
-    font-size: 1.1rem;
-    color: #8c6a5d;
-  }
-  
-  .upcoming-events p {
-    margin: 0;
-    font-size: 0.9rem;
-    color: #6c757d;
   }
   
   /* Footer Styles */
@@ -150,9 +131,4 @@ body {
       right: 1rem;
       top: 4rem;
     }
-  
-    .about-us {
-      margin-right: 0;
-    }
   }
-  
