--- a/client/src/components/HomePage.css
+++ b/client/src/components/HomePage.css
@@ -101,7 +101,8 @@ body {
   
   /* Footer Styles */
   footer {
-    padding: 20px 0;
+    padding: 0;
+    height: 1rem;
     background-color: #8c6a5d !important;
     color: #eee4b1;
     border-top: 1px solid #ddd;
