--- a/client/src/components/AdminDashboard.css
+++ b/client/src/components/AdminDashboard.css
@@ -35,7 +35,9 @@ body {
   }
   
   .sidebar ul li a:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
+    background-color: white;
+    color: black;
   }
   
   .content {
